# clipwarden

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
docs/: architecture.md  detection-model.md  threat-model.md
src/clipwarden/: __main__.py  alert.py  autostart.py  classifier.py  config.py  constants.py  detector.py  logger.py  notifier.py  paths.py  runtime.py  singleton.py  tray.py  watcher.py  whitelist.py
src/clipwarden/validators/: __init__.py  _keccak.py  base58check.py  bech32.py  eip55.py  solana.py
tests/: conftest.py  test_alert.py  test_attacker_sim.py  test_attacker_sim_gui.py  test_autostart.py  test_classifier.py  test_config.py  test_detector.py  test_detector_hypothesis.py  test_dev_feed.py  test_gen_checksums.py  test_logger.py  test_notifier.py  test_paths.py  test_runtime_integration.py  test_singleton.py  test_smoke.py  test_tray.py  test_validators_base58check.py  test_validators_bech32.py  test_validators_dispatch.py  test_validators_eip55.py  test_validators_keccak.py  test_validators_solana.py  test_version_sync.py  test_watcher.py  test_whitelist.py
tests/fixtures/: false_positives.txt  real_addresses.json
tests/fixtures/scenarios/: btc_substitution.yml  deliberate_recopy.yml  whitelisted_pair.yml
tools/: attacker_sim.py  attacker_sim_gui.py  dev_feed.py  gen_checksums.py  gen_fixtures.py  gen_icons.py  smoke_pipeline.py
